fix image moda close button spacing issue

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -198,7 +198,7 @@
   }
 
   .modal__close-btn-image {
-    top: -15px;
-    right: 50px;
+    top: -25px;
+    right: 40px;
   }
 }
